<resources>
    <string name="app_name">EMMTools</string>

    <!-- Menu Labels -->
    <string name="menu_label_main">App Issues</string>
    <string name="menu_label_abnormal">Abnormal App</string>
    <string name="menu_label_about">About</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_battery">Battery Drainer</string>
    <string name="menu_label_download">Download</string>

    <!-- Abnormal App-->
    <string name="application_not_responding">Application Not Responding</string>
    <string name="start">Start</string>
    <string name="application_crash">Application Crash</string>

</resources>