<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_icon_home"
        android:title="@string/menu_label_main" />
    <item
        android:id="@id/menu_abnormal"
        android:icon="@drawable/ic_icon_abnormal_app"
        android:title="@string/menu_label_about" />
    <item
        android:id="@id/menu_download"
        android:icon="@drawable/ic_icon_download"
        android:title="@string/menu_label_download" />
    <item
        android:id="@id/menu_battery_drain"
        android:icon="@drawable/ic_icon_battery_drain"
        android:title="@string/menu_label_download" />
    <item
        android:id="@id/menu_settings"
        android:icon="@drawable/ic_icon_settings"
        android:title="@string/menu_label_settings" />
    <item
        android:id="@id/menu_about"
        android:icon="@drawable/ic_icon_about"
        android:title="@string/menu_label_about" />
</menu>