<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?actionBarSize"
    android:paddingHorizontal="5sp"
    tools:context=".ui.AbnormalAppFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:padding="5sp"
           android:id="@+id/tv_heading"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_label_abnormal"
           android:textSize="22sp"
           android:textStyle="bold"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/tv_subtitle_anr"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/application_not_responding"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

       <Button
           android:id="@+id/btn_anr_start"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/start"
           android:paddingBottom="5sp"
           android:textAllCaps="false"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_anr" />

       <TextView
           android:id="@+id/tv_subtitle_crash"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/application_crash"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btn_anr_start" />

       <Button
           android:id="@+id/button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/start"
           android:textAllCaps="false"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_crash" />

   </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>